--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>vis</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <title>Rank of Most Populous Cities</title>
+  <meta name="description" content="A recreation in code of the classic but still exotic bump chart from the 1890 statistical atlas by Henry Gannett.">
+  <meta name="author" content="Jim Vallandingham">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
@@ -24,6 +24,16 @@
   <div class="container">
     <div id="main" role="main">
       <div id="vis"></div>
+    </div>
+    <div id="footer">
+      <p>
+      <a href="http://www.handsomeatlas.com/us-census-statistical-atlas-1890/rank-of-the-most-populous-cities-at-each-census-1790-1890">Original</a> |
+      <a href="https://github.com/vlandham/census_bump">Source Code</a> |
+      <a href="">Discussion</a>
+      </p>
+      <p>
+      <a href="#zoom" class="zoom">Zoom</a>
+      </p>
     </div>
   </div> <!--! end of #container -->
 
