--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
     </div>
     <div id="footer">
       <p>
-      <a href="http://www.handsomeatlas.com/us-census-statistical-atlas-1890/rank-of-the-most-populous-cities-at-each-census-1790-1890">Original</a> |
-      <a href="https://github.com/vlandham/census_bump">Source Code</a> |
-      <a href="">Discussion</a>
-      </p>
-      <p>
-      <a href="#zoom" class="zoom">Zoom</a>
+      <a href="http://www.handsomeatlas.com/us-census-statistical-atlas-1890/rank-of-the-most-populous-cities-at-each-census-1790-1890" target="_blank">Original</a> |
+      <a href="https://github.com/vlandham/census_bump" target="_blank">Source Code</a> |
+      <a href="" target="_blank">Discussion</a>
       </p>
     </div>
   </div> <!--! end of #container -->
