--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <meta name="description" content="A recreation in code of the classic but still exotic bump chart from the 1890 statistical atlas by Henry Gannett.">
   <meta name="author" content="Jim Vallandingham">
 
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@vlandham">
+  <meta name="twitter:creator" content="@vlandham">
+  <meta name="twitter:title" content="Remake of Classic City Population Bumpchart">
+  <meta name="twitter:description" content="The bizarre but beautiful visualization from the 1890 statistical atlas loveingly remade using code.">
+  <meta name="twitter:image:src" content="http://vallandingham.me/census_bump/preview.png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
 
