--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p>
       <a href="http://www.handsomeatlas.com/us-census-statistical-atlas-1890/rank-of-the-most-populous-cities-at-each-census-1790-1890" target="_blank">Original</a> |
       <a href="https://github.com/vlandham/census_bump" target="_blank">Source Code</a> |
-      <a href="" target="_blank">Discussion</a>
+      <a href="http://bocoup.com/weblog/vintage-visualization-restoration-bump-chart/" target="_blank">Discussion</a>
       </p>
     </div>
   </div> <!--! end of #container -->
