--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <a href="https://github.com/vlandham/census_bump" target="_blank">Source Code</a> |
       <a href="http://bocoup.com/weblog/vintage-visualization-restoration-bump-chart/" target="_blank">Discussion</a>
       </p>
+      <p>
+        <a href="#" id="zoom">Zoom</a>
+      </p>
     </div>
   </div> <!--! end of #container -->
 
