Make footer fixed and convert "zoom" to a button
This makes the zoom button both always-visible (important on small
screens), and also more obviously a button, vs a link

--- a/index.html
+++ b/index.html
@@ -32,17 +32,15 @@
     <div id="main" role="main">
       <div id="vis"></div>
     </div>
-    <div id="footer">
-      <p>
-      <a href="http://www.handsomeatlas.com/us-census-statistical-atlas-1890/rank-of-the-most-populous-cities-at-each-census-1790-1890" target="_blank">Original</a> |
-      <a href="https://github.com/vlandham/census_bump" target="_blank">Source Code</a> |
-      <a href="http://bocoup.com/weblog/vintage-visualization-restoration-bump-chart/" target="_blank">Discussion</a>
-      </p>
-      <p>
-        <a href="#" id="zoom">Zoom</a>
-      </p>
-    </div>
   </div> <!--! end of #container -->
+  <div id="footer">
+    <p>
+    <button id="zoom">zoom</button> |
+    <a href="http://www.handsomeatlas.com/us-census-statistical-atlas-1890/rank-of-the-most-populous-cities-at-each-census-1790-1890" target="_blank">Original</a> |
+    <a href="https://github.com/vlandham/census_bump" target="_blank">Source Code</a> |
+    <a href="http://bocoup.com/weblog/vintage-visualization-restoration-bump-chart/" target="_blank">Discussion</a>
+    </p>
+  </div>
 
 
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
